# godot

./: .gitignore  .lldbinit  CMakeLists.txt  COPYRIGHT.txt  Godot.cmake  GodotGenerators.cmake  IosPlatform.cmake  LinuxPlatform.cmake  MacosPlatform.cmake  SConstruct  WindowsPlatform.cmake  cmake_builders.py  cmake_env.json.in  glsl_builders.py  lldb_helpers.py  methods.py
core/: CMakeLists.txt  core_bind.cpp  core_bind.h  typedefs.h
core/config/: CMakeLists.txt  project_settings.cpp
core/crypto/: CMakeLists.txt
core/debugger/: CMakeLists.txt
core/error/: CMakeLists.txt
core/extension/: CMakeLists.txt
core/input/: CMakeLists.txt
core/io/: CMakeLists.txt
core/math/: CMakeLists.txt
core/object/: CMakeLists.txt
core/os/: CMakeLists.txt  os.h  spin_lock.h
core/string/: CMakeLists.txt  ustring.cpp
core/templates/: CMakeLists.txt
core/variant/: CMakeLists.txt
doc/: CMakeLists.txt
doc/classes/: OS.xml  ProjectSettings.xml
drivers/: CMakeLists.txt
drivers/alsa/: CMakeLists.txt
drivers/alsamidi/: CMakeLists.txt
drivers/coreaudio/: CMakeLists.txt  audio_driver_coreaudio.cpp
drivers/coremidi/: CMakeLists.txt
drivers/egl/: CMakeLists.txt
drivers/gl_context/: CMakeLists.txt
drivers/gles3/: CMakeLists.txt
drivers/metal/: CMakeLists.txt  README.md  SCsub  metal_context.h  metal_context.mm  metal_device_properties.h  metal_device_properties.mm  metal_objects.h  metal_objects.mm  metal_utils.h  pixel_formats.h  pixel_formats.mm  rendering_context_driver_metal.h  rendering_context_driver_metal.mm  rendering_device_driver_metal.h  rendering_device_driver_metal.mm  utils.h
drivers/metal/tools/: CMakeLists.txt  main.mm  types.h
drivers/png/: CMakeLists.txt
drivers/pulseaudio/: CMakeLists.txt
drivers/unix/: CMakeLists.txt
drivers/vulkan/: CMakeLists.txt
drivers/wasapi/: CMakeLists.txt
drivers/windows/: CMakeLists.txt
drivers/winmidi/: CMakeLists.txt
editor/: CMakeLists.txt  editor_node.cpp
editor/debugger/: CMakeLists.txt
editor/debugger/debug_adapter/: CMakeLists.txt
editor/export/: CMakeLists.txt
editor/gui/: CMakeLists.txt
editor/icons/: CMakeLists.txt
editor/import/: CMakeLists.txt
editor/import/3d/: CMakeLists.txt
editor/plugins/: CMakeLists.txt
editor/plugins/gizmos/: CMakeLists.txt
editor/plugins/tiles/: CMakeLists.txt
editor/project_manager/: CMakeLists.txt
editor/themes/: CMakeLists.txt
editor/translations/: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/astcenc/: CMakeLists.txt
modules/basis_universal/: CMakeLists.txt
modules/bcdec/: CMakeLists.txt
modules/betsy/: CMakeLists.txt
modules/bmp/: CMakeLists.txt
modules/camera/: CMakeLists.txt  camera_macos.mm
modules/csg/: CMakeLists.txt
modules/cvtt/: CMakeLists.txt
modules/dds/: CMakeLists.txt
modules/enet/: CMakeLists.txt
modules/etcpak/: CMakeLists.txt
modules/fbx/: CMakeLists.txt
modules/freetype/: CMakeLists.txt
modules/gdscript/: CMakeLists.txt
modules/glslang/: CMakeLists.txt  register_types.cpp
modules/gltf/: CMakeLists.txt
modules/godot_physics_2d/: CMakeLists.txt
modules/godot_physics_3d/: CMakeLists.txt
modules/godot_physics_3d/joints/: CMakeLists.txt
modules/gridmap/: CMakeLists.txt
modules/hdr/: CMakeLists.txt
modules/interactive_music/: CMakeLists.txt
modules/jpg/: CMakeLists.txt
modules/jsonrpc/: CMakeLists.txt
modules/ktx/: CMakeLists.txt
modules/lightmapper_rd/: CMakeLists.txt
modules/mbedtls/: CMakeLists.txt
modules/meshoptimizer/: CMakeLists.txt
modules/minimp3/: CMakeLists.txt
modules/mobile_vr/: CMakeLists.txt
modules/mono/: CMakeLists.txt
modules/msdfgen/: CMakeLists.txt
modules/multiplayer/: CMakeLists.txt
modules/navigation/: CMakeLists.txt
modules/noise/: CMakeLists.txt
modules/ogg/: CMakeLists.txt
modules/openxr/: CMakeLists.txt
modules/openxr/action_map/: CMakeLists.txt
modules/openxr/extensions/: CMakeLists.txt
modules/openxr/scene/: CMakeLists.txt
modules/raycast/: CMakeLists.txt
modules/regex/: CMakeLists.txt
modules/spirv_cross/: CMakeLists.txt  SCsub  register_types.cpp
modules/svg/: CMakeLists.txt
modules/text_server_adv/: CMakeLists.txt
modules/text_server_fb/: CMakeLists.txt
modules/tga/: CMakeLists.txt
modules/theora/: CMakeLists.txt
modules/tinyexr/: CMakeLists.txt
modules/upnp/: CMakeLists.txt
modules/vhacd/: CMakeLists.txt
modules/vorbis/: CMakeLists.txt
modules/webp/: CMakeLists.txt
modules/webrtc/: CMakeLists.txt
modules/websocket/: CMakeLists.txt
modules/webxr/: CMakeLists.txt
modules/xatlas_unwrap/: CMakeLists.txt
modules/zip/: CMakeLists.txt
scene/: CMakeLists.txt
scene/2d/: CMakeLists.txt
scene/2d/physics/: CMakeLists.txt
scene/2d/physics/joints/: CMakeLists.txt
scene/3d/: CMakeLists.txt
scene/3d/physics/: CMakeLists.txt
scene/animation/: CMakeLists.txt
scene/audio/: CMakeLists.txt
scene/debugger/: CMakeLists.txt
scene/gui/: CMakeLists.txt
scene/main/: CMakeLists.txt
scene/resources/: CMakeLists.txt
scene/resources/2d/: CMakeLists.txt
scene/resources/3d/: CMakeLists.txt
scene/theme/: CMakeLists.txt
servers/: CMakeLists.txt  rendering_server.cpp
servers/audio/: CMakeLists.txt
servers/audio/effects/: CMakeLists.txt
servers/camera/: CMakeLists.txt
servers/debugger/: CMakeLists.txt
servers/display/: CMakeLists.txt
servers/extensions/: CMakeLists.txt
servers/movie_writer/: CMakeLists.txt
servers/navigation/: CMakeLists.txt
servers/physics_2d/: CMakeLists.txt
servers/physics_3d/: CMakeLists.txt
servers/physics_3d/joints/: CMakeLists.txt
servers/rendering/: CMakeLists.txt  rendering_device.cpp  rendering_device_driver.h  shader_compiler.cpp  shader_compiler.h
servers/rendering/dummy/: CMakeLists.txt
servers/rendering/renderer_rd/: CMakeLists.txt  cluster_builder_rd.cpp  cluster_builder_rd.h  renderer_canvas_render_rd.cpp  renderer_canvas_render_rd.h  shader_rd.cpp  shader_rd.h
servers/rendering/storage/: CMakeLists.txt
servers/text/: CMakeLists.txt
servers/xr/: CMakeLists.txt
tests/: CMakeLists.txt
(+55 files in other folders)
